# fp_ticketing

./: DDD.md  ExerciseHelpQueueSystem-DDD-Context.md  UserStories.md  rollen.md
api/: Cargo.toml  README.md
api/src/: domain.rs  error.rs  http.rs  main.rs  service.rs  state.rs
client/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: api.ts  main.tsx  root.tsx  styles.css  types.ts
